Bug#34685358 Integrate crund build in our cmake files
In MySQL 9.x update crund to run under Java 11.

Change-Id: I86b9fa27452b3a706cdd5425a5f293d4f120ff9f